fix: solve issue on zooming on firefox

--- a/src/components/export/pdfExport.module.scss
+++ b/src/components/export/pdfExport.module.scss
@@ -4,13 +4,11 @@
 @import '@/styles/breakpoints';
 
 .listItem {
-  :global{
+  :global {
     .mantine-List-itemIcon {
-      background-color: blue;
-      width: auto;
-      max-width: auto;
+      // background-color: blue;
+      width: 24px;
       display: flex;
-      flex-direction: row;
     }
   }
 }
@@ -37,7 +35,6 @@
 .settingsPanel {
   width: 100%;
   height: 100%;
-  padding: 10px;
   overflow-y: auto;
   @include md {
     width: 40%;
@@ -67,7 +64,14 @@
 }
 
 .scaleRow {
-  display: flex;
+  // display: flex;
+  .inputContainer {
+    margin-left: 5px;
+    height: 30px;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .scaleInput {
@@ -97,6 +101,7 @@
   max-width: 300px;
   @include md {
     flex-direction: row;
+    align-items: center;
   }
   .layerInput {
     margin-top: none;
@@ -121,17 +126,9 @@
 .sortableList {
   li {
     padding: 0.5em 0;
-    border-bottom: 1px solid #ccc;
   }
 }
 
-.btnAdd {
-  color: $colorPrimary;
-  margin-top: 5px;
-  border-radius: 10px;
-  :global {
-    .MuiListItemIcon-root {
-      color: $colorPrimary;
-    }
-  }
+.addBtn {
+  margin-bottom: 12px;
 }
